modified images directory for signup page

--- a/Signup Page/signup.html
+++ b/Signup Page/signup.html
@@ -15,10 +15,10 @@
     <div class="background">
       
 <div class="left">
-    <img src="./images/left.svg">
+    <img src="../images/signup-images/left.svg">
 </div>
 <div class="right">
-    <img src="./images/right.svg">
+    <img src="../images/signup-images/right.svg">
 
 </div>
         </div>
@@ -27,7 +27,7 @@
     </div>
         <div class="container">
             <div class="trello-logo">
-                <img alt="Trello" class="trello-img" src="./images/trello-logo-blue.svg"> 
+                <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg"> 
             </div>
             <div class="inner-section ">
                 <div class="wrapper-section">
