--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
 <body>
   <!-- Start Header -->
   <header class="fixed-top">
-    <nav class="navbar py-3">
+    <nav class="navbar py-3" id="navbar">
       <a href="welcome.html">
         <svg class="d-block" width="130" height="40" viewBox="0 0 885 272" alt="Trello">
           <g fill="#fff" fill-rule="evenodd">
@@ -33,7 +33,7 @@
       </a>
       <div>
         <a href="" class="btn btn-link btn-sm text-white">Log In</a>
-        <a href="" class="bg-white btn btn-sm font-weight-bold sig-up">Sign Up</a>
+        <a href="Signup Page/signup.html" class="bg-white btn btn-sm font-weight-bold sig-up">Sign Up</a>
       </div>
     </nav>
   </header>
@@ -50,9 +50,9 @@
         <div class="col-6">
           <img src="images/hero-a.svg" alt="" class="img-fluid">
         </div>
-        <form action="" method="post" class="d-flex justify-content-start pt-5 px-3">
+        <form action="Signup Page/signup.html" method="" class="d-flex justify-content-start pt-5 px-3">
           <input type="email" name="email" id="" placeholder="Email" class="p-1 pl-3 rounded border-0">
-          <button type="submit" class="btn btn-lg btn-success px-4">Sign Up – It’s Free!</button>
+          <input type="submit" value=" Sign Up – It’s Free!" class="btn btn-lg btn-success px-4">
         </form>
       </div>
     </div>
@@ -336,8 +336,150 @@
   </div>
   <!-- End Teams -->
   <!-- Start Slider  -->
-
+  <section class="slider">
+    <div class="container text-center">
+      <div class="row">
+        <h3>See how it works</h3>
+        <p>Go from idea to action in seconds with Trello’s intuitively simple boards, lists, and cards.</p>
+      </div>
+      <div id="carousel">
+        <a id="prev">
+          <svg height="40" viewBox="0 0 22 40" width="22">
+            <path
+              d="m4.31783602 20 16.88192488 16.8819248c.7133028.7133029.7133028 1.8697953 0 2.5830981-.7133029.7133028-1.8697953.7133028-2.5830981 0l-18.08168628-18.0816863c-.38000317-.3800032-.5575644-.8857877-.53268368-1.3833366-.02488072-.4975489.15268051-1.0033334.53268368-1.3833366l18.08168628-18.08168628c.7133028-.71330283 1.8697952-.71330283 2.5830981 0 .7133028.71330283.7133028 1.86979522 0 2.58309804z"
+              fill="#d9e4eb" transform="translate(.265262)"></path>
+          </svg>
+        </a>
+        <a id="next">
+          <svg height="40" viewBox="0 0 22 40" width="22">
+            <path
+              d="m4.31783662 20 16.88192488 16.8819248c.7133028.7133029.7133028 1.8697953 0 2.5830981-.7133029.7133028-1.8697953.7133028-2.5830981 0l-18.08168628-18.0816863c-.38000317-.3800032-.5575644-.8857877-.53268368-1.3833366-.02488072-.4975489.15268051-1.0033334.53268368-1.3833366l18.08168628-18.08168628c.7133028-.71330283 1.8697952-.71330283 2.5830981 0 .7133028.71330283.7133028 1.86979522 0 2.58309804z"
+              fill="#d9e4eb" fill-rule="evenodd" transform="matrix(-1 0 0 -1 21.734738 40)"></path>
+          </svg>
+        </a>
+        <div class="boards">
+          <div class="board active">
+            <img src="images/slider-1.JPG" alt="">
+            <p> Create a board for any project, give it a name, and invite your team. </p>
+          </div>
+          <div class="board">
+            <img src="images/slider-2.JPG" alt="">
+            <p> Add lists to create steps in a workflow that is right for you. </p>
+          </div>
+          <div class="board">
+            <img src="images/slider-3.JPG" alt="">
+            <p> Create cards for tasks to complete or information you want to organize. </p>
+          </div>
+          <div class="board">
+            <img src="images/slider-4.JPG" alt="">
+            <p> Click on a card to add details, due dates, checklists, comments, and more. </p>
+          </div>
+          <div class="board">
+            <img src="images/slider-5.JPG" alt="">
+            <p> Move them across lists to show progress. Go from "To Do" to "Done" in no time! </p>
+          </div>
+          <ul>
+            <li class="selcted"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Start Slider  -->
+  <!-- Start features -->
+  <section id="features">
+    <div class="container text-center py-5">
+      <div class="row">
+        <h3>See how it works</h3>
+        <p>Go from idea to action in seconds with Trello’s intuitively simple boards, lists, and cards.</p>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="img img-collaborate"><img src="images/updated-layouts-collab.png" width="270" alt=""></div>
+          <h5>The Team Playbook</h5>
+          <p class="small">It’s easy to get your team up and running with Trello. We’ve collected all of the boards and
+            tools your team needs to succeed in one handy resource.</p>
+          <p><a class="btn btn-secondary btn-wrap px-3" href="https://trello.com/teams">Make A Game Plan</a></p>
+        </div>
+        <div class="col-lg-4">
+          <div class="img img-apps"><img src="images/updated-layouts-platform.png" width="270" alt=""></div>
+          <h5>A Productivity Platform</h5>
+          <p class="small">Integrate the apps your team already uses directly into your workflow. Power-Ups turn Trello
+            boards into living applications to meet your team's unique business needs.</p>
+          <p><a class="btn btn-secondary btn-wrap px-3" href="/power-ups">Power-Up Your Workflow</a></p>
+        </div>
+        <div class="col-lg-4">
+          <div class="img img-sync"><img src="images/updated-layouts-sync.png" width="270" alt=""></div>
+          <h5>Always In Sync</h5>
+          <p class="small">No matter where you are, Trello stays in sync across all of your devices. Collaborate with
+            your team anywhere, from sitting on the bus to sitting on the beach.</p>
+          <p class="app-store"> <a href="https://itunes.apple.com/app/trello-organize-anything/id461504587"><img
+                src="images/btn-appstore-black.png" class="img-fluid" alt="Available on the App Store"></a> <a
+              href="https://play.google.com/store/apps/details?id=com.trello"><img src="images/btn-playstore-black.png"
+                class="img-fluid" alt="Android App on Google Play"></a> </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End features -->
+  <!-- Start Footer -->
+  <div id="bottom-gradient">
+    <!-- Start Work Smarter -->
+    <section id="work-smarter">
+      <div class="container">
+        <div class="inner py-5 px-3 px-md-5 text-center text-white">
+          <h3>Work smarter with Trello</h3>
+          <p>Companies of all shapes and sizes use Trello.</p>
+          <div class="row justify-content-center mt-5">
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/4838c7256b43105d3abe0631ac1bb72c/logo-google.svg"
+                height="60" width="168" class="img-fluid mx-auto" alt="Google"> </div>
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/759e9aaacc706fd1f2d5f81b1a76b768/logo-fender.svg"
+                height="60" width="168" class="img-fluid mx-auto" alt="Fender"> </div>
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/0a48ad04e74b4ac85420dc6e8ae829bb/logo-squarespace.svg"
+                height="80" width="200" class="img-fluid mx-auto" alt="Squarespace"> </div>
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/ef0a1d5c99b0bee172d0d8ceee54c626/logo-costco.svg"
+                height="60" width="168" class="img-fluid mx-auto" alt="Costco"> </div>
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/02368db0db91ce9af0cd8aea3c54b395/logo-lush.svg"
+                height="60" width="168" class="img-fluid mx-auto" alt="Lush"> </div>
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/182d5e3e3d2acdd3c58f474ca6f01975/logo-pinterest.svg"
+                height="60" width="168" class="img-fluid mx-auto" alt="Pinterest"> </div>
+            <div class="col-sm-6 col-lg-3 mb-5 d-flex align-items-center"> <img
+                src="https://d2k1ftgv7pobq7.cloudfront.net/meta/p/res/images/7d2b54daf0b7fec914ec72dfe509fa88/logo-peloton.svg"
+                height="51" width="175" class="img-fluid mx-auto" alt="Peloton"> </div>
+          </div>
+          <p><a href="https://trello.com/business-class" class="btn btn-light px-3">Find out how →</a></p>
+        </div>
+      </div>
+    </section>
+    <!-- End Work Smarter -->
+    <!-- Start Get Started -->
+    <section id="get-started" class="d-flex align-items-center my-4">
+      <div class="container text-center py-6">
+        <div class="row">
+          <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 px-lg-5 pt-4">
+            <h3>Start Planning Today</h3>
+            <p>Sign up and join over 1,000,000 teams worldwide who are using Trello to get more done.</p> <a
+              href="Signup Page/signup.html" class="btn btn-success px-3">Get Started – It’s Free!</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Get Started -->
+  </div>
+  <!-- End Footer -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="welcome.js"></script>
 </body>
 
 </html>
