switched to local storage for todos

--- a/index-page/homepage.html
+++ b/index-page/homepage.html
@@ -146,7 +146,7 @@
 
     <div class="card-wrapper mt-2 ml-0 mr-2">
   
-      <div class="card">
+      <div class="card" id="listTodos">
         <div class="card-headerr mb-1">
           <h2>To Do</h2>
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
@@ -169,7 +169,7 @@
           <textarea class="" name="new-task" id="new-task" cols="24" rows="3"></textarea>
   
           <div class="add-card-actions">
-            <button class="add-card-btn bar-2-btn" data-list="0">Add card</button>
+            <button class="add-card-btn bar-2-btn" data-list="Todo">Add card</button>
   
             <a href="#" class="cancel-todo">
               <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
@@ -189,7 +189,7 @@
 
     <div class="card-wrapper mt-2 ml-0 mr-2">
   
-      <div class="card">
+      <div class="card" id="listDoing">
         <div class="card-headerr mb-1">
           <h2>Doing</h2>
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
@@ -213,7 +213,7 @@
           <textarea class="" name="new-task" id="new-task" cols="24" rows="3"></textarea>
   
           <div class="add-card-actions">
-            <button class="add-card-btn bar-2-btn" data-list="1">Add card</button>
+            <button class="add-card-btn bar-2-btn" data-list="Doing">Add card</button>
   
             <a href="#" class="cancel-todo">
               <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
@@ -231,7 +231,7 @@
     
     <div class="card-wrapper mt-2 ml-0 mr-2">
   
-      <div class="card">
+      <div class="card" id="listDone">
         <div class="card-headerr mb-1">
           <h2>Done</h2>
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
@@ -255,7 +255,7 @@
           <textarea class="" name="new-task" id="new-task" cols="24" rows="3"></textarea>
   
           <div class="add-card-actions">
-            <button class="add-card-btn bar-2-btn" data-list="2">Add card</button>
+            <button class="add-card-btn bar-2-btn" data-list="Done">Add card</button>
   
             <a href="#" class="cancel-todo">
               <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
