--- a/log-in/login.html
+++ b/log-in/login.html
@@ -1,19 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Log In</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="./signup.css">
-  <title>Trello</title>
+  <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
-
+  </div>
   <div class="container">
     <div class="trello-logo">
       <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
@@ -22,69 +22,50 @@
       <div class="wrapper-section">
         <section class="signup-form">
 
-          <h1 class="heading">Sign up for your account</h1>
+          <h1 class="heading">Log in to Trello</h1>
           <form id="signup" class="sign-up-container">
 
             <div class="mb-4">
-
               <input type="email" name="email" id="email" class="form-control" value="" placeholder="Enter email"
-                autocomplete="email">
+                autocomplete autofocus>
             </div>
 
-            <div class="mb-4 hidden">
-
-              <input type="text" name="name" id="fullName" class="form-control " value="" placeholder="Enter full name"
-                autocomplete="off">
-              <small id="name-error" class="form-text text-muted text-danger "></small>
-
-            </div>
-            <div class="input-group mb-4 hidden password-group">
+            <div class="input-group mb-4  password-group">
               <input type="password" name="password" id="password" class="form-control " value=""
                 placeholder="Create password" autocomplete="new-password">
               <span class="input-group-text " id="eye-icon">
                 <i class="bi bi-eye-slash"></i>
               </span>
             </div>
-            <div class=" hidden" id="password-validation">
-              <div class="password-progress">
-                <span class="password-indicator"></span>
-              </div>
-              <p class="password-text"></p>
-            </div>
-
 
             <div id="email-error" class="error-message"></div>
-            <p class="terms-links "> By signing up, you confirm that you've read and accepted our <a
-                href="https://trello.com/legal" target="_blank">Terms of
-                Service</a> and <a href="https://trello.com/privacy" target="_blank">Privacy Policy</a>.
-            </p>
 
-            <input id="signup-continue" type="button" class="btn  signup-redirect" value="Continue" disabled>
-            <input id="signup-submit" type="submit" class="btn  signup-submit hidden" value="Sign up">
+            <input id="signup-submit" type="submit" class="btn  signup-submit" value="Log in">
 
           </form>
           <div class="separator">OR</div>
-          <form class="google-login">
-            <input type="button" value="Continue with Google" class="btn login-btn">
 
-          </form>
-          <form class="microsoft-login">
-            <input type="button" value="Continue with Microsoft" class="btn login-btn">
+          <div class="btn login-btn">
+            <img src="images/sign-in-with-google.svg" alt="">
+            <span>Continue with Google</span>
+          </div>
+          <div class="btn login-btn">
+            <img src="images/microsoft-logo.svg" alt="">
+            <span>Continue with Microsoft</span>
+          </div>
+          <div class="btn login-btn">
+            <img src="images/apple-logo-black.svg" alt="">
+            <span>Continue with Apple</span>
+          </div>
 
-          </form>
-          <form class="apple-login">
-            <input type="button" value="Continue with Apple" class="btn login-btn">
-
-          </form>
           <hr>
 
-          <span class="bottom-form-link"><a href="../log-in/login.html">Already have an account? Log In</a></span>
+          <span class="bottom-form-link"><a href="../Signup Page/signup.html">Sign up for an account</a></span>
         </section>
       </div>
 
     </div>
   </div>
-
   <div class="footer">
     <ul>
       <li><a href="#">About</a></li>
@@ -93,13 +74,12 @@
     </ul>
     <p>Created by : Mario Yunnan | Ahmed Elnewery | Mostafa Fathy</p>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
-  <script src="./signup.js"></script>
+  <script src="login.js"></script>
 </body>
 
 </html>
