--- a/welcome.html
+++ b/welcome.html
@@ -32,7 +32,7 @@
         </svg>
       </a>
       <div>
-        <a href="" class="btn btn-link btn-sm text-white">Log In</a>
+        <a href="log-in/login.html" class="btn btn-link btn-sm text-white">Log In</a>
         <a href="Signup Page/signup.html" class="bg-white btn btn-sm font-weight-bold sig-up">Sign Up</a>
       </div>
     </nav>
@@ -206,7 +206,7 @@
           <h3>Work with any team</h3>
           <p>Whether it’s for work, a side project or even the next family vacation, Trello helps your team stay
             organized.</p>
-          <button class="btn btn-secondary px-3">Start doing →</button>
+          <button class="btn btn-secondary px-3" onclick="goToLogIn()">Start doing →</button>
         </div>
       </div>
     </div>
@@ -475,6 +475,14 @@
       </div>
     </section>
     <!-- End Get Started -->
+  </div>
+  <div class="footer">
+    <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Help</a></li>
+      <li><a href="#">Developers</a></li>
+    </ul>
+    <p>Created by : Mario Yunnan | Ahmed Elnewery | Mostafa Fathy</p>
   </div>
   <!-- End Footer -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
