--- a/index-page/ahmed-changes/homepage.html
+++ b/index-page/ahmed-changes/homepage.html
@@ -128,8 +128,8 @@
         
         <span class="divider"></span>
 
-        <button class="bar-2-btn" onclick="deleteLocalStorage()" style="border: 1px solid red; background: rgb(255, 126, 146)">
-          <span>Delete all todos</span>
+        <button class="bar-2-btn" onclick="getBasicBoard()" style="border: 1px solid red; background: rgb(255, 126, 146)">
+          <span>Get starting board</span>
         </button>
         
       </div>
