--- a/index-page/ahmed-changes/homepage.html
+++ b/index-page/ahmed-changes/homepage.html
@@ -222,7 +222,7 @@
     </div>
   </div>
     </div>
-  
+  <script src="../../utilities/properId.js"></script>
   <script src="../../utilities/generateId.js"></script>
   <script src="changed.js"></script>
 </body>
