add validation to createTeamPage + logic optimizations

--- a/createTeamPage/createteam.html
+++ b/createTeamPage/createteam.html
@@ -31,13 +31,13 @@
             
             <div id="required" class="error-message"></div>
             <div class="mb-4">
-              <!-- <div class="error-message" id="nameError"></div> -->
+              <div class="error-message" id="nameError"></div>
               <label for="teamName">Name your team <span class="text-danger mx-2">*</span></label>
               <input type="text" name="teamName" id="teamName" class="form-control" value=""
                 placeholder="Enter your team name.."  >
             </div>
             <div class="mb-4">
-              <!-- <div class="error-message" id="catError"></div> -->
+              <div class="error-message" id="catError"></div>
               <label for="chooseCategory">Choose Team Category <span class="text-danger mx-2">*</span> </label>
 
               <select class="form-select form-control" id="chooseCategory" required>
@@ -51,8 +51,8 @@
 
             </div>
             <div class="mb-4">
-              <!-- <div class="error-message" id="userError"></div> -->
-              <label for="addTeamMembers" class="form-label">Add your team members<span class="text-danger mx-2">*</span> </label>
+              <div class="error-message" id="userError"></div>
+              <label for="addTeamMembers" class="form-label">Add your team members</label>
               <input class="form-control" id="addTeamMembers" type="text"  >
               <div class="form-control border-0" id="showUsers"></div>
             </div>
