add welcome text to create team page

--- a/createTeamPage/createteam.html
+++ b/createTeamPage/createteam.html
@@ -26,7 +26,7 @@
       <div class="wrapper-section">
         <section class="team-form">
 
-          <h1 class="heading">👋 Welcome, farid</h1>
+          <h1 class="heading" id="welcome-message"></h1>
           <form id="createTeam" class="team-container">
             
             <div id="required" class="error-message"></div>
