--- a/index-page/mario-changes/homepage.html
+++ b/index-page/mario-changes/homepage.html
@@ -19,7 +19,25 @@
   <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-
+  <div class="container-new-board" id="board-modai">
+    <div class="new-board-modial">
+      <div class="board-title">
+        <p>Add New board</p>
+        <input type="text" name="newBoard" id="titlenewbord" placeholder="Add board title">
+      </div>
+      <div class="board-style">
+        <p>Selcet Your Style</p>
+        <ul>
+          <li class="red" data-color="red"></li>
+          <li class="blue" data-color="blue"></li>
+          <li class="orange" data-color="orange"></li>
+          <li class="purple" data-color="purple"></li>
+        </ul>
+      </div>
+      <button class="close-modial">X</button>
+      <button class="add-board" id="add-board">Add New Board</button>
+    </div>
+  </div>
   <div class="container-fluid">
     <div class="bar-1 row pt-1">
       <div class="bar-1-left col pl-1">
@@ -59,7 +77,7 @@
       </div>
 
       <div class="bar-1-right col pr-1 row no-gutters justify-content-end">
-
+        <div class="userImg"></div>
         <button class="bar-1-btn ml-1 btn-no-text d-none d-md-block">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -87,7 +105,7 @@
     <div class="row justify-content-between pt-2" >
       <div class="col pl-13">
 
-        <button class="bar-2-btn">
+        <button class="bar-2-btn" id="open-slid-menu">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-menu-app" viewBox="0 0 16 16">
             <path d="M0 1.5A1.5 1.5 0 0 1 1.5 0h2A1.5 1.5 0 0 1 5 1.5v2A1.5 1.5 0 0 1 3.5 5h-2A1.5 1.5 0 0 1 0 3.5v-2zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-2zM0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2H1zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2h14zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
           </svg>
@@ -96,6 +114,15 @@
             <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
           </svg>
         </button>
+        <div class="slid-menu-board" id="slid-menu">
+          <div class="slid-board">
+            <h4>Your Boards</h4>
+            <button class="close-slid-menu">X</button>
+          </div>
+          <div class="create-new-board">
+            <button id="open-board-modail">Craete New Board</button>
+          </div>
+        </div>
         
         <!-- bootstrap won't work with this jquery ui -->
         <!-- <button class="bar-2-btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -109,7 +136,7 @@
         </div> -->
         
 
-        <button class="bar-2-btn">
+        <button class="bar-2-btn" id="board-name">
           <span class="currentBoardName">board name</span>
         </button>
 
