add activeBoardIdx + board creator id + board changer

--- a/index-page/homepage.html
+++ b/index-page/homepage.html
@@ -138,7 +138,7 @@
         
 
         <button class="bar-2-btn" id="board-name">
-          <span class="currentBoardName">board name</span>
+          <span class="currentBoardName">⬅️ Create board first</span>
         </button>
 
         <button class="bar-2-btn" id="favourite">
