add teams-boards logic + dummy data button

--- a/index-page/homepage.html
+++ b/index-page/homepage.html
@@ -172,6 +172,10 @@
         <button class="bar-2-btn" onclick="getBasicBoard()" style="border: 1px solid red; background: rgb(255, 126, 146)">
           <span>Get starting board</span>
         </button>
+
+        <button class="bar-2-btn" onclick="getDummyData()" style="border: 1px solid red; background: rgb(255, 126, 146)">
+          <span>Get dummy data</span>
+        </button>
         
       </div>
       <div class="col-auto pr-3">
