add colors + logic & ui fixes

--- a/index-page/homepage.html
+++ b/index-page/homepage.html
@@ -28,10 +28,13 @@
       <div class="board-style">
         <p>Selcet Your Style</p>
         <ul>
-          <li class="red" data-color="red"></li>
-          <li class="blue" data-color="blue"></li>
-          <li class="orange" data-color="orange"></li>
-          <li class="purple" data-color="purple"></li>
+          <li class="clr" data-color="#1f79bf"></li>
+          <li class="clr" data-color="#006d77"></li>
+          <li class="clr" data-color="#d90429"></li>
+          <li class="clr" data-color="#fb8500"></li>
+          <li class="clr" data-color="#023047"></li>
+          <li class="clr" data-color="purple"></li>
+          <li class="clr" data-color="#e56b6f"></li>
         </ul>
       </div>
       <button class="close-modial">X</button>
