add todo switch state (done?)

--- a/index-page/homepage.html
+++ b/index-page/homepage.html
@@ -298,7 +298,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" onclick="doneTodo(this)">Done</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="doneTodo()">Switch state</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-success" data-dismiss="modal" onclick="saveDescription(this)">Save</button>
           </div>
