--- a/log-in/login.html
+++ b/log-in/login.html
@@ -15,7 +15,9 @@
   </div>
   <div class="container">
     <div class="trello-logo">
-      <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
+      <a href="../welcome.html">
+        <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
+      </a>
     </div>
     <div class="inner-section ">
       <div class="wrapper-section">
