--- a/Signup Page/signup.html
+++ b/Signup Page/signup.html
@@ -16,7 +16,9 @@
 
   <div class="container">
     <div class="trello-logo">
-      <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
+      <a href="../welcome.html">
+        <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
+      </a>
     </div>
     <div class="inner-section ">
       <div class="wrapper-section">
