--- a/Signup Page/signup.html
+++ b/Signup Page/signup.html
@@ -16,7 +16,7 @@
 
   <div class="container">
     <div class="trello-logo">
-      <a href="../welcome.html">
+      <a href="../welcome-page/welcome.html">
         <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
       </a>
     </div>
