--- a/log-in/login.html
+++ b/log-in/login.html
@@ -15,7 +15,7 @@
   </div>
   <div class="container">
     <div class="trello-logo">
-      <a href="../welcome.html">
+      <a href="../welcome-page/welcome.html">
         <img alt="Trello" class="trello-img" src="../images/signup-images/trello-logo-blue.svg">
       </a>
     </div>
