Correct the response

--- a/Signup Page/signup.html
+++ b/Signup Page/signup.html
@@ -70,15 +70,24 @@
           </form>
           <div class="separator">OR</div>
           <form class="google-login">
-            <input type="button" value="Continue with Google" class="btn login-btn">
+            <div class="btn login-btn">
+              <img src="../log-in/images/sign-in-with-google.svg" alt="">
+              <input type="button" value="Continue with Google">
+            </div>
 
           </form>
           <form class="microsoft-login">
-            <input type="button" value="Continue with Microsoft" class="btn login-btn">
+            <div class="btn login-btn">
+              <img src="../log-in/images/microsoft-logo.svg" alt="">
+              <input type="button" value="Continue with Microsoft">
+            </div>
 
           </form>
           <form class="apple-login">
-            <input type="button" value="Continue with Apple" class="btn login-btn">
+            <div class="btn login-btn">
+              <img src="../log-in/images/apple-logo-black.svg" alt="">
+              <input type="button" value="Continue with Apple">
+            </div>
 
           </form>
           <hr>
