--- a/welcome.html
+++ b/welcome.html
@@ -42,12 +42,12 @@
   <section class="hero">
     <div class="container text-white">
       <div class="align-items-center row text-center text-md-left">
-        <div class="col-6">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <h1>Trello helps teams work more collaboratively and get more done.</h1>
           <p>Trello’s boards, lists, and cards enable teams to organize and prioritize projects in a fun, flexible, and
             rewarding way.</p>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <img src="images/hero-a.svg" alt="" class="img-fluid">
         </div>
         <form action="Signup Page/signup.html" method="" class="d-flex justify-content-start pt-5 px-3">
@@ -217,7 +217,7 @@
     <div class="container py-5 pt-md-0">
       <!-- Start Row one -->
       <div class="row align-items-center">
-        <div class="col-lg-5 col-md-5 pt-5">
+        <div class="col-lg-5 col-md-6 m-sm-4 pt-5">
           <div class="card-detail-window">
             <header></header>
             <div class="main">
@@ -305,7 +305,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-7 col-md-7">
+        <div class="col-lg-7 col-md-6">
           <h3 class="mt-3 mt-md-0">Information at a glance</h3>
           <p class="m-0">Dive into the details by adding comments, attachments, due dates, and more directly to Trello
             cards. Collaborate on projects from beginning to end.</p>
@@ -315,7 +315,7 @@
       <!-- Start Row Two -->
       <div class="row pt-5">
         <div class="col-md-5 order-md-last">
-          <img class="img-fluid mb-3" src="images/butler.png" width="754" height="578">
+          <img class="img-fluid mb-3 mb-sm-5" src="images/butler.png" width="754" height="578">
         </div>
         <div class="col-md-7">
           <h4> Built-In Workflow Automation With Butler </h4>
