removed duplicate files

--- a/welcome-page/welcome.html
+++ b/welcome-page/welcome.html
@@ -19,7 +19,7 @@
   <!-- Start Header -->
   <header class="fixed-top">
     <nav class="navbar py-3" id="navbar">
-      <a href="#">
+      <a href="welcome.html">
         <svg class="d-block" width="130" height="40" viewBox="0 0 885 272" alt="Trello">
           <g fill="#fff" fill-rule="evenodd">
             <path
@@ -32,8 +32,8 @@
         </svg>
       </a>
       <div>
-        <a href="log-in/login.html" class="btn btn-link btn-sm text-white">Log In</a>
-        <a href="Signup Page/signup.html" class="bg-white btn btn-sm font-weight-bold sig-up">Sign Up</a>
+        <a href="../log-in/login.html" class="btn btn-link btn-sm text-white">Log In</a>
+        <a href="../Signup Page/signup.html" class="bg-white btn btn-sm font-weight-bold sig-up">Sign Up</a>
       </div>
     </nav>
   </header>
@@ -42,13 +42,13 @@
   <section class="hero">
     <div class="container text-white">
       <div class="align-items-center row text-center text-md-left">
-        <div class="col-6">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <h1>Trello helps teams work more collaboratively and get more done.</h1>
           <p>Trello’s boards, lists, and cards enable teams to organize and prioritize projects in a fun, flexible, and
             rewarding way.</p>
         </div>
-        <div class="col-6">
-          <img src="images/hero-a.svg" alt="" class="img-fluid">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <img src="../images/hero-a.svg" alt="" class="img-fluid">
         </div>
         <form action="Signup Page/signup.html" method="" class="d-flex justify-content-start pt-5 px-3">
           <input type="email" name="email" id="" placeholder="Email" class="p-1 pl-3 rounded border-0">
@@ -217,7 +217,7 @@
     <div class="container py-5 pt-md-0">
       <!-- Start Row one -->
       <div class="row align-items-center">
-        <div class="col-lg-5 col-md-5 pt-5">
+        <div class="col-lg-5 col-md-6 m-sm-4 pt-5">
           <div class="card-detail-window">
             <header></header>
             <div class="main">
@@ -305,7 +305,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-7 col-md-7">
+        <div class="col-lg-7 col-md-6">
           <h3 class="mt-3 mt-md-0">Information at a glance</h3>
           <p class="m-0">Dive into the details by adding comments, attachments, due dates, and more directly to Trello
             cards. Collaborate on projects from beginning to end.</p>
@@ -315,7 +315,7 @@
       <!-- Start Row Two -->
       <div class="row pt-5">
         <div class="col-md-5 order-md-last">
-          <img class="img-fluid mb-3" src="images/butler.png" width="754" height="578">
+          <img class="img-fluid mb-3 mb-sm-5" src="../images/butler.png" width="754" height="578">
         </div>
         <div class="col-md-7">
           <h4> Built-In Workflow Automation With Butler </h4>
@@ -359,23 +359,23 @@
         </a>
         <div class="boards">
           <div class="board active">
-            <img src="images/slider-1.JPG" alt="">
+            <img src="../images/slider-1.JPG" alt="">
             <p> Create a board for any project, give it a name, and invite your team. </p>
           </div>
           <div class="board">
-            <img src="images/slider-2.JPG" alt="">
+            <img src="../images/slider-2.JPG" alt="">
             <p> Add lists to create steps in a workflow that is right for you. </p>
           </div>
           <div class="board">
-            <img src="images/slider-3.JPG" alt="">
+            <img src="../images/slider-3.JPG" alt="">
             <p> Create cards for tasks to complete or information you want to organize. </p>
           </div>
           <div class="board">
-            <img src="images/slider-4.JPG" alt="">
+            <img src="../images/slider-4.JPG" alt="">
             <p> Click on a card to add details, due dates, checklists, comments, and more. </p>
           </div>
           <div class="board">
-            <img src="images/slider-5.JPG" alt="">
+            <img src="../images/slider-5.JPG" alt="">
             <p> Move them across lists to show progress. Go from "To Do" to "Done" in no time! </p>
           </div>
           <ul>
@@ -399,27 +399,27 @@
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <div class="img img-collaborate"><img src="images/updated-layouts-collab.png" width="270" alt=""></div>
+          <div class="img img-collaborate"><img src="../images/updated-layouts-collab.png" width="270" alt=""></div>
           <h5>The Team Playbook</h5>
           <p class="small">It’s easy to get your team up and running with Trello. We’ve collected all of the boards and
             tools your team needs to succeed in one handy resource.</p>
           <p><a class="btn btn-secondary btn-wrap px-3" href="https://trello.com/teams">Make A Game Plan</a></p>
         </div>
         <div class="col-lg-4">
-          <div class="img img-apps"><img src="images/updated-layouts-platform.png" width="270" alt=""></div>
+          <div class="img img-apps"><img src="../images/updated-layouts-platform.png" width="270" alt=""></div>
           <h5>A Productivity Platform</h5>
           <p class="small">Integrate the apps your team already uses directly into your workflow. Power-Ups turn Trello
             boards into living applications to meet your team's unique business needs.</p>
           <p><a class="btn btn-secondary btn-wrap px-3" href="/power-ups">Power-Up Your Workflow</a></p>
         </div>
         <div class="col-lg-4">
-          <div class="img img-sync"><img src="images/updated-layouts-sync.png" width="270" alt=""></div>
+          <div class="img img-sync"><img src="../images/updated-layouts-sync.png" width="270" alt=""></div>
           <h5>Always In Sync</h5>
           <p class="small">No matter where you are, Trello stays in sync across all of your devices. Collaborate with
             your team anywhere, from sitting on the bus to sitting on the beach.</p>
           <p class="app-store"> <a href="https://itunes.apple.com/app/trello-organize-anything/id461504587"><img
-                src="images/btn-appstore-black.png" class="img-fluid" alt="Available on the App Store"></a> <a
-              href="https://play.google.com/store/apps/details?id=com.trello"><img src="images/btn-playstore-black.png"
+                src="../images/btn-appstore-black.png" class="img-fluid" alt="Available on the App Store"></a> <a
+              href="https://play.google.com/store/apps/details?id=com.trello"><img src="../images/btn-playstore-black.png"
                 class="img-fluid" alt="Android App on Google Play"></a> </p>
         </div>
       </div>
@@ -469,7 +469,7 @@
           <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 px-lg-5 pt-4">
             <h3>Start Planning Today</h3>
             <p>Sign up and join over 1,000,000 teams worldwide who are using Trello to get more done.</p> <a
-              href="Signup Page/signup.html" class="btn btn-success px-3">Get Started – It’s Free!</a>
+              href="../Signup Page/signup.html" class="btn btn-success px-3">Get Started – It’s Free!</a>
           </div>
         </div>
       </div>
