homepage: switching to sass + add functionality to bar 1 plus icon

--- a/index-page/homepage.html
+++ b/index-page/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage</title>
+  <title>Homepage - Trello</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
   
@@ -16,7 +16,7 @@
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   
-  <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="./dist/homepage.css">
 </head>
 <body>
   <div class="container-new-board" id="board-modai">
@@ -81,17 +81,18 @@
 
       <div class="bar-1-right col pr-1 row no-gutters justify-content-end">
         <div class="userImg" id="active-user"></div>
-        <button class="bar-1-btn ml-1 btn-no-text d-none d-md-block">
+        <!-- <button class="bar-1-btn ml-1 btn-no-text d-none d-md-block"> -->
+        <button class="bar-1-btn ml-1 open-board-modail">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
           </svg>
         </button>
 
-        <button class="bar-1-btn ml-1 btn-no-text">
+        <!-- <button class="bar-1-btn ml-1 btn-no-text">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
             <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
           </svg>
-        </button>
+        </button> -->
 
         <button class="bar-1-btn ml-1 btn-no-text" style="background-color: indianred;" id="log-out">
           
@@ -124,7 +125,7 @@
           </div>
           <!-- Make boards here! -->
           <div class="create-new-board">
-            <button id="open-board-modail">Craete New Board</button>
+            <button class="open-board-modail">Craete New Board</button>
           </div>
         </div>
         
