Convert a file welcome to scss

--- a/welcome-page/welcome.html
+++ b/welcome-page/welcome.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,800;0,900;1,300&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="welcome.css">
+  <link rel="stylesheet" href="welcome-style.css">
 </head>
 
 <body>
@@ -50,9 +50,9 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
           <img src="../images/hero-a.svg" alt="" class="img-fluid">
         </div>
-        <form action="Signup Page/signup.html" method="" class="d-flex justify-content-start pt-5 px-3">
-          <input type="email" name="email" id="" placeholder="Email" class="p-1 pl-3 rounded border-0">
-          <input type="submit" value=" Sign Up – It’s Free!" class="btn btn-lg btn-success px-4">
+        <form action="../Signup Page/signup.html" method="" class="pt-5 px-3 col-8">
+          <input type="email" name="email" id="" placeholder="Email" class="col-6 p-1 pl-3 rounded border-0">
+          <input type="submit" value=" Sign Up – It’s Free!" class="ml-md-2 col-md-5 btn btn-lg btn-success px-4">
         </form>
       </div>
     </div>
@@ -67,7 +67,7 @@
             <header>
               <h3>Team Tasks</h3>
             </header>
-            <div class="lists">
+            <div class="lists d-flex">
               <!-- Start List -->
               <div class="list">
                 <!-- Start List Content -->
@@ -111,7 +111,7 @@
                             fill="#30364c" fill-rule="evenodd" opacity=".3"></path>
                         </svg>
                       </div>
-                      <div class="card-users">
+                      <div class="card-users d-flex">
                         <div class="user user-1"></div>
                         <div class="user user-2"></div>
                       </div>
@@ -217,7 +217,7 @@
     <div class="container py-5 pt-md-0">
       <!-- Start Row one -->
       <div class="row align-items-center">
-        <div class="col-lg-5 col-md-6 m-sm-4 pt-5">
+        <div class="col-lg-5 col-md-6 m-md-0 m-sm-4 pt-5">
           <div class="card-detail-window">
             <header></header>
             <div class="main">
