--- a/createTeamPage/createteam.html
+++ b/createTeamPage/createteam.html
@@ -13,7 +13,7 @@
   href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
   />
 
-  <link rel="stylesheet" href="./createteam.css">
+  <link rel="stylesheet" href="./createteamstyle.css">
 </head>
 
 <body>
