--- a/welcome-page/welcome.html
+++ b/welcome-page/welcome.html
@@ -51,8 +51,10 @@
           <img src="../images/hero-a.svg" alt="" class="img-fluid">
         </div>
         <form action="../Signup Page/signup.html" method="" class="pt-5 px-3 col-8">
-          <input type="email" name="email" id="" placeholder="Email" class="col-6 p-1 pl-3 rounded border-0">
-          <input type="submit" value=" Sign Up – It’s Free!" class="ml-md-2 col-md-5 btn btn-lg btn-success px-4">
+          <input type="email" name="email" id="" placeholder="Email" 
+          class="col-md-6 p-md-3 pl-3 rounded border-0">
+          <input type="submit" value=" Sign Up – It’s Free!" 
+          class="ml-md-2 col-md-5 btn btn-lg btn-success px-4">
         </form>
       </div>
     </div>
