welcome page ui improvements

--- a/createTeamPage/createteam.html
+++ b/createTeamPage/createteam.html
@@ -87,7 +87,7 @@
       <li><a href="#">Help</a></li>
       <li><a href="#">Developers</a></li>
     </ul>
-    <p>Created by : Mario Yunnan | Ahmed Elnewery | Mostafa Fathy</p>
+    <p>Created by : Mario Yonan | Ahmed Elnewery | Mostafa Fathy</p>
   </div>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
