--- a/Signup Page/signup.html
+++ b/Signup Page/signup.html
@@ -105,7 +105,7 @@
       <li><a href="#">Help</a></li>
       <li><a href="#">Developers</a></li>
     </ul>
-    <p>Created by : Mario Yunnan | Ahmed Elnewery | Mostafa Fathy</p>
+    <p>Created by : Mario Yonan | Ahmed Elnewery | Mostafa Fathy</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
