--- a/log-in/login.html
+++ b/log-in/login.html
@@ -73,7 +73,7 @@
       <li><a href="#">Help</a></li>
       <li><a href="#">Developers</a></li>
     </ul>
-    <p>Created by : Mario Yunnan | Ahmed Elnewery | Mostafa Fathy</p>
+    <p>Created by : Mario Yonan | Ahmed Elnewery | Mostafa Fathy</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
