--- a/welcome-page/welcome.html
+++ b/welcome-page/welcome.html
@@ -51,7 +51,7 @@
           <img src="../images/hero-a.svg" alt="" class="img-fluid">
         </div>
         <form action="../Signup Page/signup.html" method="" class="pt-5 px-3 col-xs-12 col-md-8">
-          <input type="email" name="email" id="" placeholder="Email" class="col-xs-12 col-md-6 p-1 pl-3 rounded border-0">
+          <input type="email" name="email" id="" placeholder="Email" class="col-xs-12 col-md-6 p-1 pl-3 py-2 rounded border-0">
           <input type="submit" value=" Sign Up – It’s Free!" class="col-xs-12 ml-md-2 col-md-6 btn btn-lg btn-success px-4">
         </form>
       </div>
@@ -214,9 +214,9 @@
   <!-- End Collaborate -->
   <!-- Start Teams -->
   <div class="teams">
-    <div class="container py-5 pt-md-0">
+    <div class="container py-xs-5 pt-md-0">
       <!-- Start Row one -->
-      <div class="row align-items-center">
+      <div class="row align-items-center mb-5 mb-md-0">
         <div class="col-lg-5 col-md-6 m-md-0 m-sm-4 pt-5">
           <div class="card-detail-window">
             <header></header>
@@ -305,8 +305,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-7 col-md-6">
-          <h3 class="mt-3 mt-md-0">Information at a glance</h3>
+        <div class="col-lg-7 col-md-6 teams-second">
+          <h3 class="mt-4 mt-md-0">Information at a glance</h3>
           <p class="m-0">Dive into the details by adding comments, attachments, due dates, and more directly to Trello
             cards. Collaborate on projects from beginning to end.</p>
         </div>
@@ -315,10 +315,10 @@
       <!-- Start Row Two -->
       <div class="row pt-5">
         <div class="col-md-5 order-md-last">
-          <img class="img-fluid mb-3 mb-sm-5" src="../images/butler.png" width="754" height="578">
+          <img class="img-fluid my-3 px-3 mb-sm-5" src="../images/butler.png" width="754" height="578">
         </div>
         <div class="col-md-7">
-          <h4> Built-In Workflow Automation With Butler </h4>
+          <h3> Built-In Workflow Automation With Butler </h3>
           <div class="line my-4"></div>
           <p> Let the robots do the work! Boost productivity by unleashing the power of automation across your entire
             team with Butler, and remove tedious tasks from your to-do lists with: </p>
@@ -390,29 +390,30 @@
     </div>
   </section>
   <!-- Start Slider  -->
+  <hr style="width: 60%;">
   <!-- Start features -->
   <section id="features">
     <div class="container text-center py-5">
-      <div class="row">
-        <h3>See how it works</h3>
-        <p>Go from idea to action in seconds with Trello’s intuitively simple boards, lists, and cards.</p>
+      <div class="row mb-5">
+        <h3>Trello your way</h3>
+        <p>Use Trello the way your team works best. We’ve got the flexibility & features to fit any team’s style.</p>
       </div>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="img img-collaborate"><img src="../images/updated-layouts-collab.png" width="270" alt=""></div>
           <h5>The Team Playbook</h5>
           <p class="small">It’s easy to get your team up and running with Trello. We’ve collected all of the boards and
             tools your team needs to succeed in one handy resource.</p>
           <p><a class="btn btn-secondary btn-wrap px-3" href="https://trello.com/teams">Make A Game Plan</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="img img-apps"><img src="../images/updated-layouts-platform.png" width="270" alt=""></div>
           <h5>A Productivity Platform</h5>
           <p class="small">Integrate the apps your team already uses directly into your workflow. Power-Ups turn Trello
             boards into living applications to meet your team's unique business needs.</p>
           <p><a class="btn btn-secondary btn-wrap px-3" href="/power-ups">Power-Up Your Workflow</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="img img-sync"><img src="../images/updated-layouts-sync.png" width="270" alt=""></div>
           <h5>Always In Sync</h5>
           <p class="small">No matter where you are, Trello stays in sync across all of your devices. Collaborate with
@@ -482,7 +483,7 @@
       <li><a href="#">Help</a></li>
       <li><a href="#">Developers</a></li>
     </ul>
-    <p>Created by : Mario Yunnan | Ahmed Elnewery | Mostafa Fathy</p>
+    <p>Created by : <br>Mario Yonan | Ahmed Elnewery | Mostafa Fathy</p>
   </div>
   <!-- End Footer -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
