removed add team members

--- a/createTeamPage/createteam.html
+++ b/createTeamPage/createteam.html
@@ -50,12 +50,12 @@
               </select>
 
             </div>
-            <div class="mb-4">
+            <!-- <div class="mb-4">
               <div class="error-message" id="userError"></div>
               <label for="addTeamMembers" class="form-label">Add your team members</label>
               <input class="form-control" id="addTeamMembers" type="text"  >
               <div class="form-control border-0" id="showUsers"></div>
-            </div>
+            </div> -->
 
 
             <input id="createTeamBtn" type="submit" class="btn team-create" value="Create your team">
